--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dist/
 web-build/
 expo-env.d.ts
 
+
 # Native
 *.orig.*
 *.jks
@@ -31,6 +32,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+api/.env
 
 # typescript
 *.tsbuildinfo
