--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.35",
     "expo-constants": "~17.0.5",
     "expo-linking": "~7.0.5",
@@ -36,7 +38,6 @@
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
-    "axios": "^1.7.9",
     "glob": "^9.3.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
